--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'City and town life -- Poetry'
+- GITenberg
 title: City Ballads
 url: http://www.gutenberg.org/ebooks/36954
